--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "firebase": "~1.0.24",
     "angular-ui-date": "~0.0.3",    
     "jquery": "~2.1.0",
+    "karma-ng-html2js-preprocessor": "~0.1",
     "lodash": "~2.4.1"
   },
   "devDependencies": {
