--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "karma": "^0.12.24",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-ng-html2js-preprocessor": "~0.1",
+    "karma-chrome-launcher": "~0.1",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   },
