--- a/bower.json
+++ b/bower.json
@@ -13,27 +13,15 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-	  "angularfire": "latest",
+    "angularfire": "latest",
     "firebase": "~1.0.24",
     "angular-ui-date": "~0.0.3",    
     "jquery": "~2.1.0",
-    "karma-ng-html2js-preprocessor": "~0.1",
     "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
     "angular-scenario": "~1.2.0"
   },
-  "appPath": "app",
-  "authors": [
-    "David Domenech <ddomenech@gmail.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+  "appPath": "app"
 }
